2010-11-06  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16261: Clearing input field using clear icon doesn't get saved. (Thanks to Peter Beernink)
	* Fixed bug #16250: prototype methods are used to determine the available viewport dimensions in ExtJS plugins
	* Fixed bug #16254: Dead logo function in backend.php
	* Fixed bug #16116: Configuration module is hard to find the array key because it's not sorted
	* Fixed bug #15587: Bug: htmlspecialchars called twice (Thanks to Mickel Ricky)
	* Fixed bug #16214: Bug: Change value of Media(Flash) parameter (Thanks to Janos Thiele)

2010-11-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #7872: htmlArea RTE: Allow CSS-styles for tables without having to activate blockstyle

2010-11-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #16258: Add Khmer language to TYPO3 core (Thanks to Keo Visay)
	* Fixed bug #16130: buggy initialization of flash uploader when only certain file extensions are allowed (Thanks to Andreas Kiessling)
	* Fixed bug #16136: make it possible to really restrict to certain file extensions for filemounts (Thanks to Andreas Kiessling)

2010-11-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16257: htmlArea RTE: Rewrite stylesheets parsing functions
	* Fixed bug #16248: htmlArea RTE: Mistake in locallang file of character map

2010-11-04  Susanne Moog <typo3@susanne-moog.de>

	* Added feature #1333: stdWrap.age should differenciate between singular/plural
	* Added feature #6147: Sitemaps/Menu of subpages with active state

2010-11-04  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15537: Rename "Shortcuts" to "Bookmarks"

2010-11-04  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15656: indexed_search: Template corrections of #14130 not applied to the CSS template (Thanks to Lorenz Ulrich)

2010-11-04  Tobias Liebig  <mail_typo3@etobi.de>

	* added feature #16183: Edit TypoScript file content in t3editor (Thanks to Fabrizio Branca)
